...
    <item
        android:id="@+id/navBar_homepage"
        android:enabled="true"
        android:icon="@drawable/homepage"
        android:title="@string/NavBar_Home"/>
    <item
        android:id="@+id/navBar_roteiros"
        android:enabled="true"
        android:icon="@drawable/route"
        android:title="@string/NavBar_Itineraries"/>
    <item
        android:id="@+id/navBar_perfil"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/NavBar_Profile"/>
    <item
        android:id="@+id/navBar_contactos"
        android:enabled="true"
...
